--- a/src/main/resources/renderer/hbs/iframeInstanceTab.hbs
+++ b/src/main/resources/renderer/hbs/iframeInstanceTab.hbs
@@ -2,5 +2,5 @@
     <h2>{{tabTitle}}</h2>
 </div>
 <div>
-    <iframe id="fr" src="https://{{iframeUrl}}" width="100%" height="{{iframeHeight}}" style="border:1px solid #555555;"></iframe>
+    <iframe id="fr" src="{{iframeUrl}}" width="100%" height="{{iframeHeight}}" style="border:1px solid #555555;"></iframe>
 </div>
